didn't completely fix update but improved it

--- a/app/views/recipients/edit.html.erb
+++ b/app/views/recipients/edit.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @recipient.name.capitalize %>'s List</h1>
+`<h1><%= @recipient.name.capitalize %>'s List</h1>
 <div class="field">
   <% @recipients_stuff.each do |recipient_stuff| %>
     <div class="field">Product<%= recipient_stuff.name.capitalize %></div>
