--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -15,7 +15,7 @@
       <div class="progress progress-striped active">
         <div class="bar" role="progressbar"></div>
       </div>
-
+    </div>
     <div class ="light well">
       <h4>Product Notification Information</h4>
         <div class="field"> 
