--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -19,8 +19,8 @@
         <%#= link_to "Product has it's own expiration date",id: "ownExpDate" %>
     		<%= f.text_field :exp_date , :id => "datepicker" %>
         
-        <%= f.label :storage, "Storage:" %>
-    	<%= f.text_field :storage %>
+        <%#= f.label "Storage:" %>
+    	<%#= f.text_field :storage %>
     </div>
 
     <div class = "light well">
