--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -13,7 +13,7 @@
       <p>Date of Expiration: <span id = "date_exp"><%= @user_product.exp_date %></span></p>
       
       <div class="progress progress-striped active">
-        <div class="bar progress-bar-info" role="progressbar"></div>
+        <div class="bar" role="progressbar"></div>
       </div>
     </div>
 
@@ -38,6 +38,6 @@
 
   </div>
 
-<script>
-  getDates();
-</script>
+  <script>
+    getDates();
+  </script>
