--- a/app/views/user_added_products/edit.html.erb
+++ b/app/views/user_added_products/edit.html.erb
@@ -33,6 +33,8 @@
   <p> Notify by: </p>
 
   <div class = "light well">
+    <%= f.check_box(:email) %>
+    <%= f.label(:email, "Notify me by email") %>
 
     <%= f.check_box(:sms) %>
     <%= f.label(:sms, "Notify me by text message") %>
@@ -61,6 +63,7 @@
         <option value='Year(s)'>Year(s)</option>
       </select>
     </div>
+
     <input id="notification_date" name="user_added_product[notification_date]" /><br />
   </div>
     <div class="light well">
@@ -78,7 +81,6 @@
       </ul>
       <%= link_to 'Add people to notifications', '#add_recipients', id: "add_recipients" %>
     </div>
-
 
     <div id="add_ppl">
     </div>
