--- a/app/views/user_added_products/edit.html.erb
+++ b/app/views/user_added_products/edit.html.erb
@@ -12,7 +12,7 @@
     <%= f.label :product_details %>
     <%= f.text_field :product_details %>
 
-    <p>Date Added : <%= @create_date %> </p>
+    <p>Date Added : <%= @user_product.created_at.strftime("%Y-%m-%d") %> </p>
     
     <%= f.label :number_unit_of_time, "Num Time:" %>
     <%= f.select(:number_unit_of_time, options_for_select(1..15)) %> 
@@ -68,7 +68,8 @@
             <%= p.name %>
             <%= p.email %>
             <%= p.phone_number %>
-            <%= link_to %>
+            <%= link_to 'Edit' %>
+            <%= link_to 'Delete' %>
           </li>
         <% end %>
       </ul>
