create with and without recipients, update with and without recipients works but existing recipient not registering as existing recipient.

--- a/app/views/user_added_products/edit.html.erb
+++ b/app/views/user_added_products/edit.html.erb
@@ -71,8 +71,9 @@
             <%= p.name %>
             <%= p.email %>
             <%= p.phone_number %>
-            <%= link_to 'Edit' %>
-            <%= link_to 'Delete' %>
+            <%# link_to 'Edit', edit_user_added_product_recipient_path %>
+            <%# link_to 'Delete', user_added_product_path(product)%>
+            <%# link_to recipient.name.capitalize, user_added_product_recipient_path(@user_product, recipient) %>
           </li> 
         <% end %>
       </ul>
