--- a/app/views/layouts/_flash_notices.html.erb
+++ b/app/views/layouts/_flash_notices.html.erb
@@ -1,3 +1,3 @@
-<% if flash[:notice] %>
-  <div class="notice"><%= flash[:notice] %></div>
-<% end %>
+<%# if flash[:notice] %>
+  <div class="notice"><%#= flash[:notice] %></div>
+<%# end Commented this out and reworded it in the main file according to railscast wording%> 
