--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <%= csrf_meta_tag %>
     <%= javascript_include_tag "application" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
   </head>
   <body>
     <div id = "container" class= "container-fluid">
