--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Perishab.ly</title>
+    <title>Perishably</title>
     <%= csrf_meta_tag %>
     <%= javascript_include_tag "application" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -18,7 +18,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </a>
-                <a class="brand main" style="left: 836px; position: absolute;">Perishab.ly</a>
+                <a class="brand main" style="left: 836px; position: absolute;">Perishably</a>
                 <div class="nav-collapse">
                       <ul class="nav pull-left">
                         <li>Logged in as <%= current_user.email %> </li>
@@ -47,6 +47,6 @@
 
 
     </div>
-    <footer>Perishably &copy; 2014</footer>
+    <footer>Perishably</footer>
   </body>
 </html>
