--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,9 +31,9 @@
       <%= f.telephone_field :phone_number %>
     </div>  
 
-    <%= f.submit("Sign In", :class => "btn btn-info round2")%>
+    <%= f.submit("Sign Up", :class => "btn btn-info round2")%>
     
   <% end %>
 
-  <%= link_to "Log In", login_path%>
+  <%= link_to "Sign In", login_path%>
 </div>
