--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,9 +16,9 @@
  *= require bootstrap-responsive 
  *= require bootstrap-responsive.min
  *= require bootstrap.min 
- * require Redmond
  *= require perishably 
  *= require style
  *= require font-awesome
+ *= require calendar
 
  */
