--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src="http://www.gitshoes.com/repos/79.js" type='text/javascript'></script>
 <html>
   <head>
     <title>Perishab.ly</title>
