--- a/app/views/recipients/edit.html.erb
+++ b/app/views/recipients/edit.html.erb
@@ -1,12 +1,15 @@
-<h1><%= @recipient.name.capitalize %>'s List</h1>
+<h1>
+  <%= @recipient.name.capitalize %>'s List</h1>
 <div class="field">
-  <% @recipients_stuff.each do |recipient_stuff| %>
-    <div class="field">Product<%= recipient_stuff.name.capitalize %></div>
-    <div class="field">Main User<%= User.find(recipient_stuff.user_id).name %></div>
-    <div class="field">Main User ID<%= User.find(recipient_stuff.user_id).id %></div>
-    <div class="field">Expiration Date<%= recipient_stuff.exp_date %></div>
-  <%end%>
-  <%= link_to "Back", recipient_user_added_product_path %>
-  <%= f.submit "Update Recipient" %> 
+<%= form_for([@user_product, @recipient]) do |f| %>
+    <%= f.label :name %>
+    <%= f.text_area :name %>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+    <%= f.label :phone_number %>
+    <%= f.text_field :phone_number %>  
+    <%= f.submit "Update Recipient" %>   
+<%  end %>
+  <%= link_to "Back", user_added_product_path(@user_product) %>
   
 </div>
