--- a/app/views/user_added_products/edit.html.erb
+++ b/app/views/user_added_products/edit.html.erb
@@ -19,7 +19,7 @@
     <%= f.label :unit_of_time_period, "Unit of Time:" %>
 
     <%= f.select(:unit_of_time_period, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %> <br>
-    
+
     <%= f.label "Date of Expiration:" %>
     <i class="fa fa-calendar"> 
       <%= f.text_field :exp_date , :id => "datepicker"%> 
@@ -33,8 +33,6 @@
   <p> Notify by: </p>
 
   <div class = "light well">
-    <%= f.check_box(:email) %>
-    <%= f.label(:email, "Notify me by email") %>
 
     <%= f.check_box(:sms) %>
     <%= f.label(:sms, "Notify me by text message") %>
@@ -63,28 +61,29 @@
         <option value='Year(s)'>Year(s)</option>
       </select>
     </div>
-
     <input id="notification_date" name="user_added_product[notification_date]" /><br />
   </div>
     <div class="light well">
       <h4>Recipients</h4>
         <ul>
-        <%= @user_product.recipients.each do |p| %>
-          <li>
-            <%= p.name %>
-            <%= p.email %>
-            <%= p.phone_number %>
-            <%= link_to 'Edit' %>
-            <%= link_to 'Delete' %>
+        <% @user_product.recipients.each do |r| %>
+           <li> 
+            <%= r.name.capitalize %>
+            <%= r.email %>
+            <%= r.phone_number %>
+            <%= link_to 'Edit', edit_user_added_product_recipient_path(@user_product, r) %>
+            <%= link_to 'Delete', user_added_product_recipient_path(@user_product, r), method: :delete, data: { confirm: "Are you sure?" }%>
           </li> 
         <% end %>
       </ul>
       <%= link_to 'Add people to notifications', '#add_recipients', id: "add_recipients" %>
     </div>
+
+
     <div id="add_ppl">
     </div>
     <%= link_to "<i class='fa fa-chevron-circle-left'></i> &nbsp;Back".html_safe, user_added_product_path, class: "btn btn-info round2" %>
     <%= f.submit "Update Item", class: "btn btn-info round2" %>
 
-<% end %>
 
+<% end %>
