--- a/app/views/user_added_products/index.html.erb
+++ b/app/views/user_added_products/index.html.erb
@@ -8,7 +8,7 @@
   <p> My Products </p>
 
   <ul id = "user_product_list">
-    <% @products.each do |product|%>
+    <% @products.sort.each do |product|%>
       <li class="product_info"> 
         <ul class = "each_product_info">
           <li>
