fixed update phone number for existing user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
       </div>
     
       <div class="deep well">
-        
+        <%= render 'layouts/flash_notices' %>
         <%= yield %>
       </div>
 
