--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,10 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
   </head>
   <body>
-    <div id = "container" class= "container-fluid">
+    <div id = "container" class= "fronty">
       <div id = "user_header">
         <% if current_user %>
+          <div id ="topLink"> </div>
           <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
               <div class="container-fluid">
@@ -19,35 +20,40 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </a>
-                <a class="brand main" style="left: 836px; position: absolute;">Perishably</a>
-                <div class="nav-collapse">
-                      <ul class="nav pull-left">
-                        <li>Logged in as <%= current_user.email %> </li>
-                    <!-- <li class="smooth"><a href="#topLink" class="smooth">Home</a></li>
-<li><a href="#showcase" class="smooth">Showcase</a></li>
-<li><a href="#features" class="smooth">Features</a></li>
-<li><a href="#newElements" class="smooth">Elements</a></li>
-<li><a href="#contactFooter" class="snooth">Contact</a></li> -->
-                    
+                <a class="brand main">Perishably</a>
+                <div class="nav-collapse collapse">
+                  <ul class="nav pull-left">
+                    <li><a href ="#" class="smooth">Logged in as <%= current_user.email %></a></li>
+                    <li class="smooth"><a href="#topLink" class="smooth">Home</a></li>
+                    <li><a href="#showcase" class="smooth">Showcase</a></li>
+                    <li><a href="#features" class="smooth">Features</a></li>
+                    <li><a href="#newElements" class="smooth">Elements</a></li>
+                    <li><a href="#contactFooter" class="snooth">Contact</a></li>
                   </ul>
                   <div class="pull-right">
                     <%= link_to "<i class='fa fa-sign-in'></i> &nbsp;Logout".html_safe, logout_path, class: "btn btn-info round2" %>
                   </div>
-                    </div>
-                
+                </div>
               </div>
             </div>
           </div>
         <% end %>
       </div>
     
-      <div class="deep well">
+      <div class="container-fluid pad58"> <br> <br>
         <%= render 'layouts/flash_notices' %>
-        <%= yield %>
+        <div class= "row-fluid">
+          <div class = "mainlogo">
+            <img src="assets/mainlogo.png" alt="Perishably" style="margin-left:-240px;" />
+          </div>
+        </div>
+
+        <div class = "row-fluid borBox well deep">
+          <%= yield %>
+        </div>
       </div>
 
 
     </div>
-    <footer></footer>
   </body>
 </html>
