fixed autocomplete. the class fronty keeps breaking it

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
   </head>
   <body>
-    <div id = "container" class= "fronty">
+    <div id = "container">
       <div id = "user_header">
         <% if current_user %>
           <div id ="topLink"> </div>
