fixed flash messages

--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -1,6 +1,6 @@
-<%= render "layouts/flash_notices" %>
+<%# render "layouts/flash_notices" %>
 
-<h1><%= @recipient.name.capitalize %>'s List</h1>
+<h1><%= @recipient.name.capitalize %>'s Tagged Items List</h1>
 
 <p> List of Items </p>
 <ul>
