--- a/app/views/user_added_products/index.html.erb
+++ b/app/views/user_added_products/index.html.erb
@@ -4,7 +4,7 @@
 
   <p> List of Items </p>
 <div class="light well">
-  <%= render "layouts/flash_notices" %>
+  <%# render "layouts/flash_notices" %>
   <p> My Products </p>
 
   <ul id = "user_product_list">
