--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -1,4 +1,4 @@
-<%= render "layouts/flash_notices" %>
+<%# render "layouts/flash_notices" %>
 <h1><i class="fa fa-barcode"></i> <%= @user_product.name.capitalize %> </h1>
 <div class ="light well">
     <h4>Product Information</h4>
