--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
         <% end %>
       </div>
     
-      <div class="container-fluid pad58"> <br> <br>
+      <div class="container-fluid"> <br> <br>
         <%#= render 'layouts/flash_notices' %>
         <div class= "row-fluid">
           <div class = "mainlogo">
@@ -47,7 +47,10 @@
           <%= yield %>
         </div>
       </div>
-
+      
+      <div class="footer">
+        Perishably
+      </div>
 
     </div>
   </body>
